# pi_contest

./: .gitattributes  .gitignore  Dockerfile  README.md  ask.py  circle.py  count.py  graph.py  pi_contest  pi_contest.kv  pi_contest.py  pi_game.py  player.kv  player.py  pyproject.toml  requirements.txt  run.sh
